# testauskameli

./: Cargo.toml  LICENSE  README.md  install-runners.sh
bot/: Cargo.toml
bot/src/: executor.rs  main.rs
cli/: Cargo.toml
cli/src/: executor.rs  main.rs
install-dir/: js-runner
src/: cmd.rs  lib.rs  main.rs
src/commands/: haskell.rs  meme_generator.rs  mod.rs
src/snippets/: haskell.rs  mod.rs  nomeme.rs
testauskameli/: Cargo.toml
testauskameli/src/: cmd.rs  lib.rs  utils.rs
testauskameli/src/snippets/: c.rs  echo.rs  h264ify.rs  haskell.rs  idris.rs  js.rs  latex.rs  lisp.rs  mod.rs  nomeme.rs  whois.rs
tests/: c.c  haskell.hs  idris.idr  javascript.js  lisp.lisp
