[package]
name = "testauskameli"
version = "0.1.0"
edition = "2021"
authors = ["Luukas Pörtfors <lajp@iki.fi>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
version = "0.10.10"
default_features = false
features = ["client", "gateway", "rustls_backend", "model"]

[dependencies.tokio]
version = "1.13"
features = ["macros", "rt-multi-thread", "signal"]

[dependencies.openssl-sys]
version = "0.9.7"
features = ["vendored"]

[dependencies]
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.2"
