[package]
name = "cli"
version = "0.1.0"
edition = "2021"
authors = ["Luukas Pörtfors <lajp@iki.fi>", "Lukáš Hozda <me@mag.wiki>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
async-trait = "0.1.52"
flume = "0.10.10"
anyhow = "1.0.53"
either = "1.6.1"
dashmap = "5.0.0"
dotenv = "0.15"

[dependencies.tokio]
version = "1.13"
features = ["macros", "rt-multi-thread", "signal"]

[dependencies.testauskameli]
version = "0.1.0"
path = "../testauskameli"
